--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Dashboard</title>
 
-</body>
+        {% extends 'base.html' %}
+
+        {% block title %}Home{% endblock %}
+
+        {% block content %}
+        {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <p><a href="{% url 'logout' %}">logout</a></p>
+        {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">login</a>
+        {% endif %}
+        {% endblock %}
+    </head>
+    <body>
+
+    </body>
 </html>
