--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -238,13 +238,13 @@
       </div>
   </footer>
 
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'blog/vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'blog/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <script src="{% static 'blog/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+  <script src="{% static 'blog/vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
 
-  <script src="js/creative.min.js"></script>
+  <script src="{% static 'blog/js/creative.min.js' %}"></script>
 
 </body>
 
