--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,4 +10,7 @@
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+<p>
+<a href="{% url 'password_reset' %}">Forgot Password?</a>
+</p>
 {% endblock %}
