--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>PostIt - Post your blog here</title>
+  <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" />
   <link href="{% static 'blog/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
