--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!-- templates/base.html -->
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" />
 </head>
 <body>
   <main>
