--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,10 +1,12 @@
+{% extends 'base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Dashboard</title>
+        <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" />
 
-        {% extends 'base.html' %}
 
         {% block title %}Home{% endblock %}
 
