--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -25,7 +25,11 @@
               <div class="col-lg-10 align-self-end">
                   <h1 class="text-white font-weight-bold">PostIt</h1><br>
                   <h3 class="text-uppercase text-white font-weight-bold">Your Favorite Blog publishing platform</h3>
-                  <p>{{ user.username }}</p>
+                  {% block auth_content %}
+                      {% if user.is_authenticated %}
+                          <p>{{ user.username }}</p>
+                      {% endif %}
+                  {% endblock %}
                   <hr class="divider my-4">
               </div>
               <div class="col-lg-8 align-self-baseline">
