--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
-          {% if not user %}
+          {% if user.is_authenticated %}
             {# Should have been - if user - #}
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My blogs</a>
