--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -27,13 +27,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
-          {% if not user %}
-            {# Should have been - if user - #}
+          {% if user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My blogs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My account</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My profile</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a>
