--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -27,7 +27,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
-          {% if not user %}
+          {% if user.is_authenticated %}
             {# Should have been - if user - #}
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My blogs</a>
@@ -36,7 +36,7 @@
                 <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'blog:logout' %}">Logout</a>
             </li>
           {% else %}
             <li class="nav-item">
