--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -28,12 +28,11 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           {% if user.is_authenticated %}
-            {# Should have been - if user - #}
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My blogs</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'blog:my_blogs' %}">My blogs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'blog:index' %}">My account</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'blog:profile' %}">My account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'blog:logout' %}">Logout</a>
