--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>{% block title %}{% endblock %}</title>
+  <title>PostIt - Post your blog here</title>
   <link rel="shortcut icon" href="{% static 'blog/img/favicon.png' %}" />
   <link href="{% static 'blog/css/style.css' %}" rel="stylesheet" type="text/css">
 
