--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -35,7 +35,7 @@
                 <a class="nav-link js-scroll-trigger" href="{% url 'blog:profile' %}">My account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'blog:logout' %}">Logout</a>
             </li>
           {% else %}
             <li class="nav-item">
