--- a/templates/main/my_blogs.html
+++ b/templates/main/my_blogs.html
@@ -16,8 +16,11 @@
         <br>
         {% if my_posts %}
             {% for post in my_posts %}
-                <h4> > <a href="/{{post.id}}"><u>{{ post.post_name }}</u></a></h4>
-                <div style="text-align:right;"> By {{ post.post_user_id }}, written on {{ post.date_created }}</div><br>
+                 <div style="border-style:solid; border-width:thin; padding:10px;">
+                    <h4> > <a href="/{{post.id}}"><u>{{ post.post_name }}</u></a></h4>
+                    <div style="text-align:right;"> By {{ post.post_user_id }}, written on {{ post.date_created }}</div><br>
+                 </div>
+                <br><br>
             {% endfor %}
         {% else %}
             <h5>No posts found!!</h5>
@@ -29,8 +32,11 @@
         <br>
         {% if all_posts %}
             {% for post in all_posts %}
-                <h4> > <a href="/{{post.id}}"><u>{{ post.post_name }}</u></a></h4>
-                <div style="text-align:right;"> By {{ post.post_user_id }}, written on {{ post.date_created }}</div><br>
+                <div style="border-style:solid; border-width:thin; padding:10px;">
+                    <h4> > <a href="/{{post.id}}"><u>{{ post.post_name }}</u></a></h4>
+                    <div style="text-align:right;"> By {{ post.post_user_id }}, written on {{ post.date_created }}</div><br>
+                </div>
+                <br><br>
             {% endfor %}
         {% else %}
             <h5>No posts found!!</h5>
